Add async_grpc repo to Wally (#14)

--- a/wally_the_cartographer/config_sample.json
+++ b/wally_the_cartographer/config_sample.json
@@ -1,5 +1,6 @@
 {
    "managed_repositories": [
+      "googlecartographer/async_grpc",
       "googlecartographer/cartographer",
       "googlecartographer/cartographer_fetch",
       "googlecartographer/cartographer_ros",
