Also build and install the mir repo. (#32)

--- a/evaluation/Dockerfile
+++ b/evaluation/Dockerfile
@@ -43,7 +43,7 @@ RUN rm -rf $HOME/scripts
 
 ENV CARTO_WORKSPACE $HOME/catkin_ws/src
 
-# Install dependencies:
+# Install dependencies.
 RUN $CARTO_WORKSPACE/cartographer_ros/scripts/install_debs.sh && rm -rf /var/lib/apt/lists/*
 
 # Build and install.
@@ -51,6 +51,7 @@ RUN $CARTO_WORKSPACE/cartographer_ros/scripts/install.sh --pkg cartographer_ros_
     $CARTO_WORKSPACE/cartographer_ros/scripts/install.sh --pkg cartographer && \
     $CARTO_WORKSPACE/cartographer_ros/scripts/install.sh --pkg cartographer_ros && \
     $CARTO_WORKSPACE/cartographer_ros/scripts/install.sh --pkg cartographer_fetch && \
+    $CARTO_WORKSPACE/cartographer_ros/scripts/install.sh --pkg cartographer_mir && \
     $CARTO_WORKSPACE/cartographer_ros/scripts/install.sh --pkg cartographer_rviz
 
 # Copy the ros_entrypoint.sh
